Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66407

Crash in BoundingVolumeCalculator if restart index is used

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.0
    • 5.9, 5.10.1, 5.11
    • Qt3D
    • None
    • Latest 5.10 sources from git
    • 0bbccd492532786adc6816b992b85b4fdf162842

      Qt3D crashes when rendering triangle strip or line loop geometry that uses restart index. I set the restart index value to 0xffff (65535). Qt3D crashes inside BufferVisitor::traverseCoordinates3Indexed in buffervisitor_p.h. In the debugger (attached screenshot) you see that n is 720885 and stride is 11, which implies that indices[i] is 65535. This of course causes problems when the coordinates array is dereferenced with this index.

      This must be a recent regression as my code worked previously without problems.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            harald Harald Vistnes
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes